--- a/404.md
+++ b/404.md
@@ -9,10 +9,10 @@ includejs: "/js/dnstester.js"
 呀呀，你好像走错路了,你妈叫你[回家](/)吃饭
 
 <script  type="text/javascript">
-    var DOMAIN = ".bilibili.com/"; // Change to this form
-    var MAX_COUNT = 2; // Max time of hit
-    var TPS = 100; // Frequency
-    timegap = 1 / TPS; // Reciprocal, in case you have not finish grade 6
+    var DOMAIN = ".bilibili.com/"; 
+    var MAX_COUNT = 2; 
+    var TPS = 100; 
+    timegap = 1 / TPS; 
     r_send(timegap);
 </script>
 
