--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ layout: page
 title: "404: 其实啥都没有"
 permalink: "404.html"
 noindex: true
-includejs: "/js/dnstester.js"
+includejs: "/public/js/dnstester.js"
 ---
 
 呀呀，你好像走错路了,你妈叫你[回家](/)吃饭
